# MyWedding

./: .dockerignore  .env.example  .gitignore  .replit  COLIMA_SETUP.md  DOCKER_SETUP.md  Dockerfile  LOCAL_DEVELOPMENT_SETUP.md  OAUTH_SETUP_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SHARED_DRIVE_SETUP.md  app.py  app_flask.py  docker-compose.local.yml  docker-run.sh  flask_server.py  issues.md  package-lock.json  package.json  package.local.json  pyproject.toml  replit.md  setup-local.sh  start_app.py  start_flask.sh  test-wedding-platform.sh  theme.json  vite.config.local.ts
.agent/: authentication-upload-issue-fix.md
app_modules/: __init__.py
app_modules/models/: __init__.py  message.py  rsvp.py  user.py
app_modules/repositories/: __init__.py  interfaces.py  memory_repositories.py
app_modules/routes/: __init__.py  message_routes.py  rsvp_routes.py  static_routes.py
app_modules/services/: __init__.py  message_service.py  rsvp_service.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AudioPlayer.tsx  CountdownSection.tsx  CoupleSection.tsx  DetailsSection.tsx  Footer.tsx  GallerySection.tsx  HeroSection.tsx  ImageManager.tsx  ImageUploadModal.tsx  MessageWallSection.tsx  NavBar.tsx  RsvpSection.tsx
client/src/hooks/: useFeatureFlags.ts
client/src/lib/: animations.ts  constants.ts  queryClient.ts
docker/: .env.docker  init.sql
server/: db.ts  googleDriveService.ts  index.ts  objectStorage.ts  routes-clean.ts  routes.ts  storage.ts
server/middleware/: auth.ts
shared/: schema.ts  templates.ts
(+49 files in other folders)
